--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 body, html {
+  font-family: 'Inter', 'Montserrat', sans-serif;
   background: lightgrey;
   text-align: center;
-  width: 1140px;
   margin: auto;
 }
 
