--- a/src/components/FileImporter.css
+++ b/src/components/FileImporter.css
@@ -1,9 +1,37 @@
-.fileImporter {
-    width: 100%;
-    height: 200px;
-    border:2px dashed #ccc;
+.file-importer-container {
+    border: 2px dashed #ccc;
     text-align: center;
-    padding-top: 80px;
+    padding: 20px 10px;
     box-sizing: border-box;
     cursor: pointer;
+    margin-bottom: 20px;
+
+}
+
+.file-label {
+    display: block;
+    font-size: 16px;
+}
+
+.file-input {
+    display: none;
+}
+
+.parsed-data {
+    margin-top: 20px;
+}
+
+.parsed-data h3 {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.parsed-data ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.parsed-data li {
+    font-size: 14px;
+    margin-bottom: 5px;
 }
