--- a/src/components/ChooseData.css
+++ b/src/components/ChooseData.css
@@ -42,7 +42,9 @@
     background-color: white;
     border-radius: 50%;
     transition: left 0.3s ease;
+    color: transparent;
 }
+
 
 .toggle-switch-label {
     display: inline-block;
