--- a/src/components/ChooseData.css
+++ b/src/components/ChooseData.css
@@ -1,7 +1,7 @@
 .choose-data-container {
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     gap: 10px;
     margin-bottom: 20px;
     margin-top: 20px;
