--- a/src/components/SVGhangman.css
+++ b/src/components/SVGhangman.css
@@ -24,3 +24,15 @@
     transform-origin: top center;
     animation: swing-rope 3s cubic-bezier(0.25, 0.25, 0.25, 0.5) forwards infinite;
 }
+
+@media (max-width: 600px) {
+    .svgs-container {
+        transform: scale(0.4);
+        width: 50vw;
+        height: 50vh;
+        border: 1px dotted #007bff;
+        display: none;
+    }
+    position: relative;
+    z-index: -1;
+}
