--- a/src/components/Hangman.css
+++ b/src/components/Hangman.css
@@ -11,15 +11,18 @@
 
 .content-area {
     display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 20px;
+    padding-top: 20px;
+}
+
+.right-content {
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 20px;
-}
-
-.bottom-content {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
 }
 
 @media (max-width: 800px) {
@@ -37,6 +40,34 @@
 .hiddenWord {
     font-size: 36px;
     font-weight: bolder;
-    margin-bottom: 0;
     letter-spacing: 20px;
+}
+
+@media (max-width: 600px) {
+
+    .content-area {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+    }
+
+    .left-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .keyboard {
+        padding: 10px 10px;
+    }
+
+    .hiddenWord {
+        font-size: clamp(16px, 6vw, 48px);
+        font-weight: bolder;
+        margin-bottom: 0;
+        letter-spacing: 2vw;
+    }
+
 }
