--- a/src/components/SVGhangman.css
+++ b/src/components/SVGhangman.css
@@ -30,7 +30,7 @@
         transform: scale(0.4);
         width: 50vw;
         height: 50vh;
-        border: 1px dotted #007bff;
+        border: 1px dotted var(--primary-color);
         display: none;
     }
     position: relative;
