--- a/src/components/ChooseData.css
+++ b/src/components/ChooseData.css
@@ -3,11 +3,10 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 10px;
-    margin-bottom: 20px;
-    margin-top: 20px;
+    padding: 10px 20px;
 }
 
-.choose-data-container > h3 {
+.choose-data-container > h4 {
     margin: 0;
 }
 
@@ -59,7 +58,7 @@
 }
 
 .toggle-switch-checkbox:checked + .toggle-switch {
-    background-color: #007bff;
+    background-color: var(--primary-color);
 }
 
 .toggle-switch-checkbox:checked + .toggle-switch .toggle-switch-label {
