--- a/src/components/Hangman.css
+++ b/src/components/Hangman.css
@@ -1,7 +1,7 @@
 .keyboard {
     background: #F6F6F6;
     padding: 45px 40px;
-    border-radius: 40px;
+    border-radius: 4px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -10,37 +10,55 @@
 
 
 .content-area {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: center;
-    gap: 20px;
-    padding-top: 20px;
-}
-
-.right-content {
+    max-width: 1440px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 20px;
+    padding-top: 20px;
+    text-align: center;
 }
 
-@media (max-width: 800px) {
-    .bottom-content {
-        grid-template-columns: 1fr;
-    }
+.word-section > h4{
+    margin: 0;
+    padding-bottom: 10px;
+}
+
+.down-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 40px;
 }
 
 .svgs-container {
     width: 512px;
     height: 512px;
-    border: 1px dotted #007bff;
+    border: 1px dotted var(--primary-color);
 }
 
 .hiddenWord {
     font-size: 36px;
     font-weight: bolder;
     letter-spacing: 20px;
+    border-radius: 4px;
+    padding: 10px 20px;
+    margin: 0;
+}
+
+.hidden-char {
+    width: 20px;
+    height: 20px; /* Add a height that suits your design */
+    margin: 0 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-bottom: 4px solid var(--text-default);
+}
+
+.hidden-char[data-content='_'] {
+    color: transparent !important;
 }
 
 @media (max-width: 1100px) {
