--- a/src/components/ScoreTracker.css
+++ b/src/components/ScoreTracker.css
@@ -1,11 +1,21 @@
 .score-tracker-grid {
+    width: 100%;
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
-    gap: 10px;
-    padding: 20px;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+    border: 1px solid var(--gray4);
+}
+
+.score-tracker-grid > h2{
+    margin: 0;
+}
+
+.score-tracker-grid > p {
+    font-size: 16px;
+    font-weight: bold;
+    color: var(--text-default);
 }
 
 .score-tracker-grid > div:not(.top-row) {
@@ -17,6 +27,8 @@
 }
 
 .top-row {
-    color: #007bff;
+    color: white;
+    background-color: var(--primary-color);
+    margin: 0;
     font-weight: bolder;
 }
