--- a/src/components/Settings.css
+++ b/src/components/Settings.css
@@ -1,13 +1,21 @@
 .settings-section {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
 }
 
-.settings-section button {
-    padding: 0 15px;
-    font-size: 1.2rem;
-    background-color: transparent;
+#logout-btn {
+    padding: 10px 16px;
+    background-color: var(--primary-color);
+    color: #fff;
     border: none;
-    color: #007bff;
-    font-weight: bolder;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+#mute-btn {
+    border: none;
+    background: transparent;
+    scale: 0.8;
 }
