--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,9 @@ body, html {
     font-size: 18px;
 }
 
+#navigation >li >.active {
+    color: var(--primary-color);
+    font-weight: bolder;
+    transition: color 0.5s ease;
+}
+
