--- a/src/App.css
+++ b/src/App.css
@@ -67,3 +67,13 @@ body, html {
     transition: color 0.5s ease;
 }
 
+.fade-enter {
+    opacity: 0;
+    z-index: 1;
+}
+
+.fade-enter-active {
+    opacity: 1;
+    transition: opacity 300ms ease-in;
+}
+
