--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ body, html {
   text-align: center;
   margin: auto;
   max-width: 1440px;
-  overflow-x: hidden;
+  overflow: hidden;
     color: var(--text-default);
 }
 
@@ -74,6 +74,7 @@ body, html {
 
 .fade-enter-active {
     opacity: 1;
-    transition: opacity 300ms ease-in;
+    transition: opacity 200ms ease-in;
 }
+
 
