--- a/src/components/LoginPage.css
+++ b/src/components/LoginPage.css
@@ -7,6 +7,10 @@
     flex-shrink: 0;
     border-radius: 3px;
     overflow: hidden;
+    background-image: url("../assets/frontRope.jpg");
+    background-size: cover;
+    background-position: bottom;
+    background-repeat: no-repeat;
 }
 
 .login-container h4 {
@@ -91,18 +95,11 @@
     color: var(--primary-color);
 }
 
-.rope-image {
-    position: absolute;
-    top: -55%;
-    right: -10%;
-    width: 110%;
-    z-index: -1;
-    transition: all 0.02s ease-in-out;
-}
+@media (max-width: 1500px) {
+    /* Replace 600px with the height of your image */
+    .login-container {
+        background-image: none;
 
-@media (max-width: 1500px) { /* Replace 600px with the height of your image */
-    .rope-image {
-        display: none;
     }
 }
 
